<resources>
    <string name="app_name">mFriends</string>
    <string name="createUser">Create User</string>
    <string name="name">Name :</string>
    <string name="phone">Phone :</string>
    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="web">Web</string>
    <string name="camera">Camera</string>
</resources>